Address several contact form styling issues
* style.css: Fix width & margins issue on mobile devices for contact
input fields.
* style.css: Use font-family 'Arial' as default for all input field
types; the rendering of certain characters (i.e.: capital J) looks
funny to me (when using 'Open Sans')...

* contact_form.jade: Fix layout issue with alert icon & wrapped text.

* contact_form.jade: Rename 'Your Full Name', 'Your E-mail Address'
input fields to 'Your Name', 'Your Email Address'.
* contact_form.jade: Use explicit 'Required' label text for marking
required input fields.

* Introduce rescaled alert icon sizes: alert_24.png, alert_32.png.
  Rename alert.png to alert_48.png.
* contact_form.jade: Use smaller alert icon (use alert_32.png).

* contact.js: Re-declare mock_errs as an app-wide variable (see app.js)
for ease of access.

--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -41,11 +41,7 @@
     display: none;
   }
 
-  .contact_form #phone_area {
-    width: 30px;
-  }
-
-  .contact_form #phone_prefix {
+  .contact_form #phone_area, #phone_prefix {
     width: 30px;
   }
 
