--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,10 +46,9 @@ input, select, textarea {
   /* Offset text within field */
   padding-left: 10px;
   padding-right: 10px;
-
-  font-family: $content_font;
   font-size: 100%;
   font-weight: 600;
+  font-family: 'Arial', sans-serif;
 }
 
 select {
@@ -409,8 +408,22 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $content_font;
 }
 
-.contact_form fieldset {
-  max-width: 50%;
+.contact_form .label {
+  margin-top: 10px;
+  font-weight: 600;
+}
+
+// Do not use adjusted font-weight for TOS checkbox input field
+.contact_form .label .tos {
+  font-weight: normal;
+}
+
+.contact_form .req {
+  display: block;
+  font-weight: normal;
+  // font-weight: 600;
+  font-size: 75%;
+  color: gray;
 }
 
 /* Container to hold both the form input element and applicable error message */
@@ -419,19 +432,15 @@ h1, h2, h3, h4, h5, h6 {
   width: 96%;
 }
 
-.contact_form #contact_name, #contact_email {
-  // Expand to the full width of the input_container class
-  width: 100%;
+.contact_form #contact_name, #contact_email, #contact_message {
+  // Expand to the full width of the input_container class, accounting for
+  // platform-dependent margins (i.e.: mobile)
+  width: 96%;
 
   height: 38px;
 }
 
-.contact_form #phone_area {
-  width: 40px;
-  height: 38px;
-}
-
-.contact_form #phone_prefix {
+.contact_form #phone_area, #phone_prefix {
   width: 40px;
   height: 38px;
 }
@@ -443,10 +452,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .contact_form #contact_message {
-  // Expand to the full width of the input_container class
-  width: 100%;
   height: 120px;
 }
+
+// .contact_form fieldset {
+//   max-width: 50%;
+// }
 
 // .contact_form #phone_ext {
 //   width: 40px;
@@ -665,12 +676,6 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
 }
 
-.req {
-  /*font-size: 100;*/
-  color: red;
-  font-weight: bold;
-}
-
 .err {
   font-size: 100%; // of 16px
   font-weight: 600;
@@ -690,8 +695,13 @@ h1, h2, h3, h4, h5, h6 {
 /* Experimental (breaks Mobile Safari select input fields) */
 /* Return value must be enabled in lib/form_helpers.js */
 .red-border {
-  border: 1px solid red;
-  /*outline: 1px solid red;*/
+  // border: 1px solid red;
+  outline: 1px solid red;
+}
+
+.red-border:focus {
+  // border: 1px solid red;
+  outline: 2px solid red;
 }
 
 .gray-border {
@@ -711,18 +721,6 @@ h1, h2, h3, h4, h5, h6 {
 .address, address {
   font-family: $content_font;
   font-style: normal;
-}
-
-.left-col {
-  width: 80%;
-  float: left;
-}
-
-/* Desktop only */
-.right-col {
-  width: 20%;
-  float: right;
-  margin-top: auto;
 }
 
 /* Google Static Map */
